Preload images on outlet to prevent layoutshifts

--- a/components/globals.css
+++ b/components/globals.css
@@ -60,6 +60,12 @@ body {
   }
 }
 
+.image {
+  display: block;
+  width: 50%;
+  height: auto;
+  aspect-ratio: attr(width) / attr(height);
+}
 /* Colors */
 :root {
   --white: var(--white);
